Verify social login
Make appConfig available through app.get.
Add config.url.home
Clean up success redirects
Show provider on social login in navbar
Show read-only profile on social login

--- a/app/config/appConfig.json
+++ b/app/config/appConfig.json
@@ -23,6 +23,9 @@
 			"session": "mission fission division iwannasession",
 			"user": "user user whatanabuser",
 			"token": "token token freshfromHoboken"
+		},
+		"url": {
+			"home": "/"
 		}
 	},
 	"development": {
