Add password complexity checker
Add user roles and access levels.
Add complexity checker for passwords.
Update documentation.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "passport-local": "*",
         "passport-remember-me": "*",
         "passport-twitter": "*",
-        "underscore": "*"        
+        "passport-localapikey": "*",
+        "underscore": "*",
+	"node-complexify": "*"        
     },
     "keywords": [
         "nodejs",
